@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: October 7, 2008</p>
+      <p>Last Updated: October 9, 2008</p>
     </td>
   </tr>
 </table>
@@ -1081,6 +1081,7 @@ nuttx-0.3.16 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	* Add LPC214x USB serial configuration; Add examples/usbserial test (still a work in progress)
 	* Added USB device side driver for the DM320 (untested at initial checkin)
 	* Fixed an error in a previous (post 0.3.15) check-in that broke the LPC214x system timer.
+	* Fixed serial drive bugs related to (1) open counts and (2) recognizing O_NONBLOCK on read.
 
 pascal-0.1.3 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
